--- a/style.css
+++ b/style.css
@@ -1855,7 +1855,7 @@ a {
 
 .page-links {
   clear: both;
-  margin: 0 0 4.6666em; }
+  margin: 1.9833em 0 4.6666em; }
   .page-links .page-links-title {
     color: #2d2d2d; }
   .page-links a {
