--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -220,6 +220,10 @@
 
 					img {
 						opacity: 0.25;
+
+						@at-root .is_mobile#{&} {
+							opacity: 1;
+						}
 					}
 
 					.add_to_cart_button,
@@ -228,6 +232,11 @@
 					.product_type_variable {
 						opacity: 1;
 						visibility: visible;
+
+						@at-root .is_mobile#{&} {
+							opacity: 0;
+							visibility: hidden;
+						}
 					}
 				}
 
