--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -232,7 +232,10 @@
 					.product_type_variable {
 						opacity: 1;
 						visibility: visible;
+					}
 
+					* {
+						
 						@at-root .is_mobile#{&} {
 							opacity: 0;
 							visibility: hidden;
