--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -491,6 +491,7 @@
 				margin: 0 0 13px 0;
 				padding: 0 0 13px 0;
 				position: relative;
+				text-align: left;
 
 				a {
 					margin: 0;
@@ -560,6 +561,7 @@
 			font-size: 14px;
 			margin: 14px 0 0 0;
 			padding: 5px 0 !important;
+			text-align: left;
 
 			strong {
 				font-weight: normal;
