--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -6,6 +6,13 @@
 		border-bottom: none;
 	}
 
+	@at-root .header-design-1 & {
+		.sticky-bar-sentinel {
+			position: relative;
+			top: 1px;
+		}
+	}
+
 	// Sticky-menu.
 	.sticky-bar {
 		background: #fff;
@@ -104,7 +111,7 @@
 			display: inline-block;
 			float: left;
 			padding: calc(#{$masthead__padding} /2) 0;
-			
+
 			.site-title {
 				@include font-size(2.5);
 				text-align: left;
