Prevent page header margin in post loops

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -6,8 +6,12 @@
 }
 
 .page-header,
-.page article:first-of-type .entry-header {
+.page article .entry-header {
 	margin-bottom: 2em;
+}
+
+.page .widget_siteorigin-panels-postloop article .entry-header {
+	margin-bottom: 0;
 }
 
 .entry {
