--- a/style.css
+++ b/style.css
@@ -1750,8 +1750,11 @@ a {
   display: block; }
 
 .page-header,
-.page article:first-of-type .entry-header {
+.page article .entry-header {
   margin-bottom: 2em; }
+
+.page .widget_siteorigin-panels-postloop article .entry-header {
+  margin-bottom: 0; }
 
 .entry {
   margin-bottom: 5em; }
