Added project loop article

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -24,6 +24,11 @@
 @import "primary/posts-and-pages";
 
 /*--------------------------------------------------------------
+## Portfolio
+--------------------------------------------------------------*/
+@import "primary/portfolio";
+
+/*--------------------------------------------------------------
 ## Asides
 --------------------------------------------------------------*/
 @import "primary/asides";
