--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -21,38 +21,55 @@
 	}
 }
 
+.portfolio-loop {
+	#projects-container {
+		margin-right: -1.1667%;
+		margin-left: -1.1667%;
+
+		@at-root body:not(.no-active-sidebar) & {
+
+			@media (max-width: 1175px) {
+				margin-right: -0.875%;
+				margin-left: -0.875%;
+			}
+
+			@media (max-width: 640px) {
+				margin: 0;
+			}
+
+		}
+
+		@at-root .no-active-sidebar & {
+
+			@media (max-width: 890px) {
+				margin-right: -0.875%;
+				margin-left: -0.875%;
+			}
+
+			@media (max-width: 640px) {
+				margin: 0;
+			}
+
+		}
+	}
+}
+
 .site-main {
 	.jetpack-portfolio.post {
 		float: left;
 		margin-bottom: 30px;
-		margin-right: 3.5%;
+		margin-right: 1.1667%;
+		margin-left: 1.1667%;
 		position: relative;
 		vertical-align: top;
 		width: 31%;
 
 		@at-root body:not(.no-active-sidebar) & {
 
-			@media (min-width: 1175px) {
-
-				&:nth-child(3n+3) {
-					margin-right: 0;
-				}
-
-				&:nth-child(3n+4) {
-					clear: left;
-				}
-			}
-
 			@media (max-width: 1175px) {
+				margin-right: 0.875%;
+				margin-left: 0.875%;
 				width: 48.25%;
-
-				&:nth-child(2n) {
-					margin-right: 0;
-				}
-
-				&:nth-child(3n) {
-					clear: right;
-				}
 			}
 
 			@media (max-width: 640px) {
@@ -65,27 +82,10 @@
 
 		@at-root .no-active-sidebar & {
 
-			@media (min-width: 890px) {
-
-				&:nth-child(3n+3) {
-					margin-right: 0;
-				}
-
-				&:nth-child(3n+4) {
-					clear: left;
-				}
-			}
-
 			@media (max-width: 890px) {
+				margin-right: 0.875%;
+				margin-left: 0.875%;
 				width: 48.25%;
-
-				&:nth-child(2n) {
-					margin-right: 0;
-				}
-
-				&:nth-child(3n) {
-					clear: right;
-				}
 			}
 
 			@media (max-width: 640px) {
