--- a/style.css
+++ b/style.css
@@ -2632,43 +2632,48 @@ a {
       border-bottom: 2px #2d2d2d solid;
       color: #2d2d2d; }
 
+.portfolio-loop #projects-container {
+  margin-right: -1.1667%;
+  margin-left: -1.1667%; }
+  @media (max-width: 1175px) {
+    body:not(.no-active-sidebar) .portfolio-loop #projects-container {
+      margin-right: -0.875%;
+      margin-left: -0.875%; } }
+  @media (max-width: 640px) {
+    body:not(.no-active-sidebar) .portfolio-loop #projects-container {
+      margin: 0; } }
+  @media (max-width: 890px) {
+    .no-active-sidebar .portfolio-loop #projects-container {
+      margin-right: -0.875%;
+      margin-left: -0.875%; } }
+  @media (max-width: 640px) {
+    .no-active-sidebar .portfolio-loop #projects-container {
+      margin: 0; } }
+
 .site-main .jetpack-portfolio.post {
   float: left;
   margin-bottom: 30px;
-  margin-right: 3.5%;
+  margin-right: 1.1667%;
+  margin-left: 1.1667%;
   position: relative;
   vertical-align: top;
   width: 31%; }
-  @media (min-width: 1175px) {
-    body:not(.no-active-sidebar) .site-main .jetpack-portfolio.post:nth-child(3n+3) {
-      margin-right: 0; }
-    body:not(.no-active-sidebar) .site-main .jetpack-portfolio.post:nth-child(3n+4) {
-      clear: left; } }
   @media (max-width: 1175px) {
     body:not(.no-active-sidebar) .site-main .jetpack-portfolio.post {
-      width: 48.25%; }
-      body:not(.no-active-sidebar) .site-main .jetpack-portfolio.post:nth-child(2n) {
-        margin-right: 0; }
-      body:not(.no-active-sidebar) .site-main .jetpack-portfolio.post:nth-child(3n) {
-        clear: right; } }
+      margin-right: 0.875%;
+      margin-left: 0.875%;
+      width: 48.25%; } }
   @media (max-width: 640px) {
     body:not(.no-active-sidebar) .site-main .jetpack-portfolio.post {
       clear: none;
       display: block;
       margin-right: 0;
       width: 100%; } }
-  @media (min-width: 890px) {
-    .no-active-sidebar .site-main .jetpack-portfolio.post:nth-child(3n+3) {
-      margin-right: 0; }
-    .no-active-sidebar .site-main .jetpack-portfolio.post:nth-child(3n+4) {
-      clear: left; } }
   @media (max-width: 890px) {
     .no-active-sidebar .site-main .jetpack-portfolio.post {
-      width: 48.25%; }
-      .no-active-sidebar .site-main .jetpack-portfolio.post:nth-child(2n) {
-        margin-right: 0; }
-      .no-active-sidebar .site-main .jetpack-portfolio.post:nth-child(3n) {
-        clear: right; } }
+      margin-right: 0.875%;
+      margin-left: 0.875%;
+      width: 48.25%; } }
   @media (max-width: 640px) {
     .no-active-sidebar .site-main .jetpack-portfolio.post {
       clear: none;
