Updated portfolio archive styling

--- a/style.css
+++ b/style.css
@@ -2632,22 +2632,27 @@ a {
       border-bottom: 2px #2d2d2d solid;
       color: #2d2d2d; }
 
-.portfolio-loop #projects-container {
+.portfolio-loop #projects-container,
+.post-type-archive-jetpack-portfolio .site-main {
   margin-right: -1.1667%;
   margin-left: -1.1667%; }
   @media (max-width: 1175px) {
-    body:not(.no-active-sidebar) .portfolio-loop #projects-container {
+    body:not(.no-active-sidebar) .portfolio-loop #projects-container, body:not(.no-active-sidebar)
+    .post-type-archive-jetpack-portfolio .site-main {
       margin-right: -0.875%;
       margin-left: -0.875%; } }
   @media (max-width: 640px) {
-    body:not(.no-active-sidebar) .portfolio-loop #projects-container {
+    body:not(.no-active-sidebar) .portfolio-loop #projects-container, body:not(.no-active-sidebar)
+    .post-type-archive-jetpack-portfolio .site-main {
       margin: 0; } }
   @media (max-width: 890px) {
-    .no-active-sidebar .portfolio-loop #projects-container {
+    .no-active-sidebar .portfolio-loop #projects-container, .no-active-sidebar
+    .post-type-archive-jetpack-portfolio .site-main {
       margin-right: -0.875%;
       margin-left: -0.875%; } }
   @media (max-width: 640px) {
-    .no-active-sidebar .portfolio-loop #projects-container {
+    .no-active-sidebar .portfolio-loop #projects-container, .no-active-sidebar
+    .post-type-archive-jetpack-portfolio .site-main {
       margin: 0; } }
 
 .site-main .jetpack-portfolio.post {
