--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -21,36 +21,35 @@
 	}
 }
 
-.portfolio-loop {
-	#projects-container {
-		margin-right: -1.1667%;
-		margin-left: -1.1667%;
+.portfolio-loop #projects-container,
+.post-type-archive-jetpack-portfolio .site-main {
+	margin-right: -1.1667%;
+	margin-left: -1.1667%;
 
-		@at-root body:not(.no-active-sidebar) & {
+	@at-root body:not(.no-active-sidebar) & {
 
-			@media (max-width: 1175px) {
-				margin-right: -0.875%;
-				margin-left: -0.875%;
-			}
-
-			@media (max-width: 640px) {
-				margin: 0;
-			}
-
+		@media (max-width: 1175px) {
+			margin-right: -0.875%;
+			margin-left: -0.875%;
 		}
 
-		@at-root .no-active-sidebar & {
-
-			@media (max-width: 890px) {
-				margin-right: -0.875%;
-				margin-left: -0.875%;
-			}
-
-			@media (max-width: 640px) {
-				margin: 0;
-			}
-
+		@media (max-width: 640px) {
+			margin: 0;
 		}
+
+	}
+
+	@at-root .no-active-sidebar & {
+
+		@media (max-width: 890px) {
+			margin-right: -0.875%;
+			margin-left: -0.875%;
+		}
+
+		@media (max-width: 640px) {
+			margin: 0;
+		}
+
 	}
 }
 
