Change site title word break

--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -85,6 +85,7 @@
 			text-align: center;
 			text-transform: uppercase;
 			word-break: break-all;
+    		word-break: break-word;
 
 			@media (max-width: 480px) {
 				@include font-size(3.2);
