--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -53,104 +53,101 @@
 	}
 }
 
-.site-main {
-	.jetpack-portfolio.post {
-		float: left;
-		margin-bottom: 30px;
-		margin-right: 1.1667%;
-		margin-left: 1.1667%;
-		position: relative;
-		vertical-align: top;
-		width: 31%;
+.archive-project {
+	float: left;
+	margin-bottom: 30px;
+	margin-right: 1.1667%;
+	margin-left: 1.1667%;
+	position: relative;
+	vertical-align: top;
+	width: 31%;
 
-		@at-root body:not(.no-active-sidebar) & {
+	@at-root body:not(.no-active-sidebar) & {
 
-			@media (max-width: 1175px) {
-				margin-right: 0.875%;
-				margin-left: 0.875%;
-				width: 48.25%;
-			}
-
-			@media (max-width: 640px) {
-				clear: none;
-				display: block;
-				margin-right: 0;
-				width: 100%;
-			}
+		@media (max-width: 1175px) {
+			margin-right: 0.875%;
+			margin-left: 0.875%;
+			width: 48.25%;
 		}
 
-		@at-root .no-active-sidebar & {
-
-			@media (max-width: 890px) {
-				margin-right: 0.875%;
-				margin-left: 0.875%;
-				width: 48.25%;
-			}
-
-			@media (max-width: 640px) {
-				clear: none;
-				display: block;
-				margin-right: 0;
-				width: 100%;
-			}
-
-		}
-
-		.entry-thumbnail {
-			margin: 0;
-		}
-
-		.entry-overlay {
-			background-color: rgba( 265, 265, 265, 0.9 );
-			height: 100%;
-			opacity: 0;
-			position: absolute;
-			top: 0;
-			transition: 0.3s;
-			visibility: hidden;
+		@media (max-width: 640px) {
+			clear: none;
+			display: block;
+			margin-right: 0;
 			width: 100%;
+		}
+	}
 
-			.entry-link {
-				height: 100%;
-				width: 100%;
-			}
+	@at-root .no-active-sidebar & {
 
-			.entry-title {
-				bottom: 60%;
-				color: $color__text-dark;
-				font-size: 16px;
-				font-weight: bold;
-				margin: 0;
-				position: absolute;
-				text-align: center;
-				width: 100%;
-			}
-
-			.entry-divider {
-				border: solid $color__text-dark 1px;
-				bottom: 55%;
-				left: 50%;
-				position: absolute;
-				width: 30px;
-				@include transform( translateX( -50% ) );
-			}
-
-			.entry-project-type {
-				color: $color__text-light;
-				font-size: 12px;
-				position: absolute;
-				text-align: center;
-				text-transform: uppercase;
-				top: 48%;
-				width: 100%;
-			}
+		@media (max-width: 890px) {
+			margin-right: 0.875%;
+			margin-left: 0.875%;
+			width: 48.25%;
 		}
 
-		&:hover {
-			.entry-overlay {
-				opacity: 1;
-				visibility: visible;
-			}
+		@media (max-width: 640px) {
+			clear: none;
+			display: block;
+			margin-right: 0;
+			width: 100%;
+		}
+	}
+
+	.entry-thumbnail {
+		margin: 0;
+	}
+
+	.entry-overlay {
+		background-color: rgba( 265, 265, 265, 0.9 );
+		height: 100%;
+		opacity: 0;
+		position: absolute;
+		top: 0;
+		transition: 0.3s;
+		visibility: hidden;
+		width: 100%;
+
+		.entry-link {
+			height: 100%;
+			width: 100%;
+		}
+
+		.entry-title {
+			bottom: 60%;
+			color: $color__text-dark;
+			font-size: 16px;
+			font-weight: bold;
+			margin: 0;
+			position: absolute;
+			text-align: center;
+			width: 100%;
+		}
+
+		.entry-divider {
+			border: solid $color__text-dark 1px;
+			bottom: 55%;
+			left: 50%;
+			position: absolute;
+			width: 30px;
+			@include transform( translateX( -50% ) );
+		}
+
+		.entry-project-type {
+			color: $color__text-light;
+			font-size: 12px;
+			position: absolute;
+			text-align: center;
+			text-transform: uppercase;
+			top: 48%;
+			width: 100%;
+		}
+	}
+
+	&:hover {
+		.entry-overlay {
+			opacity: 1;
+			visibility: visible;
 		}
 	}
 }
@@ -193,3 +190,6 @@
 		}
 	}
 }
+/*--------------------------------------------------------------
+### Projects Loop
+--------------------------------------------------------------*/
