Added project single posts

--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -22,7 +22,8 @@
 }
 
 .portfolio-loop #projects-container,
-.post-type-archive-jetpack-portfolio .site-main {
+.post-type-archive-jetpack-portfolio .site-main,
+.related-projects {
 	margin-right: -1.1667%;
 	margin-left: -1.1667%;
 
