--- a/sass/woocommerce/_layout.scss
+++ b/sass/woocommerce/_layout.scss
@@ -71,20 +71,30 @@
 
 .woocommerce-store-notice,
 p.demo_store {
-	position: relative;
 	background: $color__primary-accent;
 	box-shadow: none;
 	color: #fff;
-	font-family: $font__details;
 	font-size: 13px;
-	padding: 15px;
+	line-height: 1; 
+	padding: 20px;
 	position: relative;
 	text-align: center;
 	top: 0;
 
 	.woocommerce-store-notice__dismiss-link {
-		padding-left: 15px;
+		color: #fff; 
+		text-decoration: underline;
 	}
+
+	&:after {
+		bottom: -14px;
+ 		box-shadow: rgba(0, 0, 0, .25) 0 14px 14px -14px inset;
+  		content: "";
+  		height: 14px;
+  		left: 0;
+  		position: absolute;
+  		width: 100%;
+	}	
 }
 
 .admin-bar p.demo_store {
